# IstinaEndfieldAssistant_Sight

./: ._vlm_helper.py  .env.example  .gitignore  .tmp_adr_diff.txt  10.0.0  2.0.0  AGENTS.md  AndroidManifest.xml  CLAUDE.md  CODE_REVIEW_REPORT.md  README.md  SIGHT_AUDIT_REPORT.md  __init__.py  all_remaining_files.txt  all_scripts.txt  check_dex.py  check_jar.py  check_jar_contents.py  check_manifest.py  check_server_file.py  command_help.md  debug_path.py  debug_scrcpy_raw.py  extract_anomalies.py  launch.vbs  pyproject.toml  real_device_touch_test.py  real_device_touch_validation.json  remaining_src.txt  requirements.txt  sitecustomize.py  start.bat  start_gui.bat  start_scrcpy_server.bat  task_list.json  test_adb_connection.py  test_adbutils_source.py  test_connection_detail.py  test_network_enum.py  test_network_members.py  (+8 more)
.plan/: execution_plan.md
config/: client_config.example.json  client_config.local.json  endfield_world_model.json  logging_config.json  maaend_task_state.json  models.json  ocr_config.json  tiers.json  user_preferences.json
data/: ver.json
docs/: ARCHITECTURE.md  CHAIN_RECONSTRUCTION_REPORT.md  CODE_QUALITY_AND_CLEANUP.md  CODE_REVIEW_NAMING_AND_BINDING.md  CONFIG_PERSISTENCE_FIX.md  DEAD_CODE_CLEANUP.md  DELEGATION_CHAIN_ANALYSIS.md  DELIVERY_CHECKLIST.md  FINAL_DIAGNOSIS_REPORT.md  FINAL_MIGRATION_SUMMARY.md  FINAL_TECHNICAL_REPORT.md  FLOW_FIX_SUMMARY.md  GUI_CLI_AND_AUTOMATION.md  GUI_LOG_CATEGORIES.md  GUI_TASK_QUEUE_ANALYSIS.md  IEA_VS_MaaEnd_COMPARISON.md  LLM_AND_NAVIGATION.md  LLM_PERFORMANCE.md  LOCAL_ONLY_CHECKLIST.md  README.md  (+28 more)
(+846 files in other folders)
